[package]
name = "connect-rs"
version = "0.1.0"
edition = "2021"
authors = ["Paul Iyobo <pauliyobo@gmail.com"]

[dependencies]
anyhow = "1.0.90"
base64 = "0.22.1"
reqwest = { version = "0.12.8", features = ["json"] }
reqwest-retry = "0.6.1"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
reqwest-middleware = { version = "0.3.3", features = ["json"] }
retry-policies = "0.4.0"
thiserror = "2.0.11"
