[package]
name = "connect-rs"
version = "0.1.0"
edition = "2021"
authors = ["Paul Iyobo <pauliyobo@gmail.com"]

[dependencies]
anyhow = "1.0.90"
base64 = "0.22.1"
reqwest = { version = "0.12.8", features = ["json"] }
reqwest-retry = "0.7"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
retry-policies = "0.4.0"
thiserror = "2.0.11"
async-trait = "0.1.85"

[dev-dependencies]
mockito = "1.6.1"
serde_json = "1.0.135"
