[package]
name = "connect-rs"
version = "0.1.0"
edition = "2024"
authors = ["Paul Iyobo <pauliyobo@gmail.com"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
reqwest = { version = "0.12.19", features = ["json"] }
reqwest-retry = "0.7"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
retry-policies = "0.4.0"
thiserror = "2.0.12"

[dev-dependencies]
mockito = "1.7.0"
serde_json = "1.0.140"
